# network_killer

./: Cargo.toml  README.md
src/: interfaces.rs  main.rs  netlink.rs  reset.rs  streams.rs
